force-app/main/default/objects/OI_Log_Event__e/OI_Log_Event__e.object-meta.xml
<CustomObject>
    <label>OI Log Event</label>
    <pluralLabel>OI Log Events</pluralLabel>
    <description>Decouples log writes from the caller's transaction (Architecture §13). Consumed by OI_LogEventTrigger, which persists to OI_Log__c asynchronously.</description>
</CustomObject>