force-app/main/default/objects/OI_Log_Event__e/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName>
    <label>Correlation Id</label>
    <type>Text</type>
    <length>36</length>
</CustomField>