force-app/main/default/objects/OI_Log_Event__e/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <type>Text</type>
    <length>10</length>
    <required>true</required>
</CustomField>