force-app/main/default/objects/OI_Log_Event__e/fields/Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace__c</fullName>
    <label>Stack Trace</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>